cs21b003_lab7/y.output
Grammar

    0 $accept: slist $end

    1 $@1: ε

    2 slist: stmt ';' $@1 slist
    3      | ε

    4 stmt: IDTEMP '=' EXPR

    5 EXPR: EXPR '+' TERM
    6     | EXPR '-' TERM
    7     | TERM

    8 TERM: TERM '*' FACT
    9     | TERM '/' FACT
   10     | FACT

   11 FACT: INC IDTEMP
   12     | IDTEMP INC
   13     | DEC IDTEMP
   14     | IDTEMP2 DEC
   15     | '-' FIX
   16     | FIX

   17 FIX: LPAREN EXPR RPAREN
   18    | IDTEMP
   19    | NUMBER
   20    | FLOAT_NUMBER

   21 IDTEMP: ID

   22 IDTEMP2: ID
   23        | '-' IDTEMP


Terminals, with rules where they appear

    $end (0) 0
    '*' (42) 8
    '+' (43) 5
    '-' (45) 6 15 23
    '/' (47) 9
    ';' (59) 2
    '=' (61) 4
    error (256)
    NUMBER (258) 19
    ID (259) 21 22
    FLOAT_NUMBER (260) 20
    INC (261) 11 12
    DEC (262) 13 14
    LPAREN (263) 17
    RPAREN (264) 17


Nonterminals, with rules where they appear

    $accept (16)
        on left: 0
    slist <node> (17)
        on left: 2 3
        on right: 0 2
    $@1 (18)
        on left: 1
        on right: 2
    stmt <node> (19)
        on left: 4
        on right: 2
    EXPR <node> (20)
        on left: 5 6 7
        on right: 4 5 6 17
    TERM <node> (21)
        on left: 8 9 10
        on right: 5 6 7 8 9
    FACT <node> (22)
        on left: 11 12 13 14 15 16
        on right: 8 9 10
    FIX <node> (23)
        on left: 17 18 19 20
        on right: 15 16
    IDTEMP <node> (24)
        on left: 21
        on right: 4 11 12 13 18 23
    IDTEMP2 <node> (25)
        on left: 22 23
        on right: 14


State 0

    0 $accept: • slist $end

    ID  shift, and go to state 1

    $default  reduce using rule 3 (slist)

    slist   go to state 2
    stmt    go to state 3
    IDTEMP  go to state 4


State 1

   21 IDTEMP: ID •

    $default  reduce using rule 21 (IDTEMP)


State 2

    0 $accept: slist • $end

    $end  shift, and go to state 5


State 3

    2 slist: stmt • ';' $@1 slist

    ';'  shift, and go to state 6


State 4

    4 stmt: IDTEMP • '=' EXPR

    '='  shift, and go to state 7


State 5

    0 $accept: slist $end •

    $default  accept


State 6

    2 slist: stmt ';' • $@1 slist

    $default  reduce using rule 1 ($@1)

    $@1  go to state 8


State 7

    4 stmt: IDTEMP '=' • EXPR

    NUMBER        shift, and go to state 9
    ID            shift, and go to state 10
    FLOAT_NUMBER  shift, and go to state 11
    INC           shift, and go to state 12
    DEC           shift, and go to state 13
    LPAREN        shift, and go to state 14
    '-'           shift, and go to state 15

    EXPR     go to state 16
    TERM     go to state 17
    FACT     go to state 18
    FIX      go to state 19
    IDTEMP   go to state 20
    IDTEMP2  go to state 21


State 8

    2 slist: stmt ';' $@1 • slist

    ID  shift, and go to state 1

    $default  reduce using rule 3 (slist)

    slist   go to state 22
    stmt    go to state 3
    IDTEMP  go to state 4


State 9

   19 FIX: NUMBER •

    $default  reduce using rule 19 (FIX)


State 10

   21 IDTEMP: ID •
   22 IDTEMP2: ID •

    DEC       reduce using rule 22 (IDTEMP2)
    $default  reduce using rule 21 (IDTEMP)


State 11

   20 FIX: FLOAT_NUMBER •

    $default  reduce using rule 20 (FIX)


State 12

   11 FACT: INC • IDTEMP

    ID  shift, and go to state 1

    IDTEMP  go to state 23


State 13

   13 FACT: DEC • IDTEMP

    ID  shift, and go to state 1

    IDTEMP  go to state 24


State 14

   17 FIX: LPAREN • EXPR RPAREN

    NUMBER        shift, and go to state 9
    ID            shift, and go to state 10
    FLOAT_NUMBER  shift, and go to state 11
    INC           shift, and go to state 12
    DEC           shift, and go to state 13
    LPAREN        shift, and go to state 14
    '-'           shift, and go to state 15

    EXPR     go to state 25
    TERM     go to state 17
    FACT     go to state 18
    FIX      go to state 19
    IDTEMP   go to state 20
    IDTEMP2  go to state 21


State 15

   15 FACT: '-' • FIX
   23 IDTEMP2: '-' • IDTEMP

    NUMBER        shift, and go to state 9
    ID            shift, and go to state 1
    FLOAT_NUMBER  shift, and go to state 11
    LPAREN        shift, and go to state 14

    FIX     go to state 26
    IDTEMP  go to state 27


State 16

    4 stmt: IDTEMP '=' EXPR •
    5 EXPR: EXPR • '+' TERM
    6     | EXPR • '-' TERM

    '+'  shift, and go to state 28
    '-'  shift, and go to state 29

    $default  reduce using rule 4 (stmt)


State 17

    7 EXPR: TERM •
    8 TERM: TERM • '*' FACT
    9     | TERM • '/' FACT

    '*'  shift, and go to state 30
    '/'  shift, and go to state 31

    $default  reduce using rule 7 (EXPR)


State 18

   10 TERM: FACT •

    $default  reduce using rule 10 (TERM)


State 19

   16 FACT: FIX •

    $default  reduce using rule 16 (FACT)


State 20

   12 FACT: IDTEMP • INC
   18 FIX: IDTEMP •

    INC  shift, and go to state 32

    $default  reduce using rule 18 (FIX)


State 21

   14 FACT: IDTEMP2 • DEC

    DEC  shift, and go to state 33


State 22

    2 slist: stmt ';' $@1 slist •

    $default  reduce using rule 2 (slist)


State 23

   11 FACT: INC IDTEMP •

    $default  reduce using rule 11 (FACT)


State 24

   13 FACT: DEC IDTEMP •

    $default  reduce using rule 13 (FACT)


State 25

    5 EXPR: EXPR • '+' TERM
    6     | EXPR • '-' TERM
   17 FIX: LPAREN EXPR • RPAREN

    RPAREN  shift, and go to state 34
    '+'     shift, and go to state 28
    '-'     shift, and go to state 29


State 26

   15 FACT: '-' FIX •

    $default  reduce using rule 15 (FACT)


State 27

   18 FIX: IDTEMP •
   23 IDTEMP2: '-' IDTEMP •

    DEC       reduce using rule 23 (IDTEMP2)
    $default  reduce using rule 18 (FIX)


State 28

    5 EXPR: EXPR '+' • TERM

    NUMBER        shift, and go to state 9
    ID            shift, and go to state 10
    FLOAT_NUMBER  shift, and go to state 11
    INC           shift, and go to state 12
    DEC           shift, and go to state 13
    LPAREN        shift, and go to state 14
    '-'           shift, and go to state 15

    TERM     go to state 35
    FACT     go to state 18
    FIX      go to state 19
    IDTEMP   go to state 20
    IDTEMP2  go to state 21


State 29

    6 EXPR: EXPR '-' • TERM

    NUMBER        shift, and go to state 9
    ID            shift, and go to state 10
    FLOAT_NUMBER  shift, and go to state 11
    INC           shift, and go to state 12
    DEC           shift, and go to state 13
    LPAREN        shift, and go to state 14
    '-'           shift, and go to state 15

    TERM     go to state 36
    FACT     go to state 18
    FIX      go to state 19
    IDTEMP   go to state 20
    IDTEMP2  go to state 21


State 30

    8 TERM: TERM '*' • FACT

    NUMBER        shift, and go to state 9
    ID            shift, and go to state 10
    FLOAT_NUMBER  shift, and go to state 11
    INC           shift, and go to state 12
    DEC           shift, and go to state 13
    LPAREN        shift, and go to state 14
    '-'           shift, and go to state 15

    FACT     go to state 37
    FIX      go to state 19
    IDTEMP   go to state 20
    IDTEMP2  go to state 21


State 31

    9 TERM: TERM '/' • FACT

    NUMBER        shift, and go to state 9
    ID            shift, and go to state 10
    FLOAT_NUMBER  shift, and go to state 11
    INC           shift, and go to state 12
    DEC           shift, and go to state 13
    LPAREN        shift, and go to state 14
    '-'           shift, and go to state 15

    FACT     go to state 38
    FIX      go to state 19
    IDTEMP   go to state 20
    IDTEMP2  go to state 21


State 32

   12 FACT: IDTEMP INC •

    $default  reduce using rule 12 (FACT)


State 33

   14 FACT: IDTEMP2 DEC •

    $default  reduce using rule 14 (FACT)


State 34

   17 FIX: LPAREN EXPR RPAREN •

    $default  reduce using rule 17 (FIX)


State 35

    5 EXPR: EXPR '+' TERM •
    8 TERM: TERM • '*' FACT
    9     | TERM • '/' FACT

    '*'  shift, and go to state 30
    '/'  shift, and go to state 31

    $default  reduce using rule 5 (EXPR)


State 36

    6 EXPR: EXPR '-' TERM •
    8 TERM: TERM • '*' FACT
    9     | TERM • '/' FACT

    '*'  shift, and go to state 30
    '/'  shift, and go to state 31

    $default  reduce using rule 6 (EXPR)


State 37

    8 TERM: TERM '*' FACT •

    $default  reduce using rule 8 (TERM)


State 38

    9 TERM: TERM '/' FACT •

    $default  reduce using rule 9 (TERM)
